--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!--Welcome-->
 
         <section id="welcome-section" class="welcome-section">
-            <img class="pic" src="images/my-pic.png" alt="my-pic" title="Heri Alias">
+            <img class="pic" src="Images/my-pic.png" alt="my-pic" title="Heri Alias">
             <h1 title="Introduction">Hello! Welcome to my Website Portfolio, I'm Heri!</h1>
             <p title="About-Me">I am a Web Developer. Now it's been more than 1+ year since I learn
                 programming,but I still have much more to learn. </p>
